Improve error handling and JSON mapping in FigureMapper